# Digitale-Identity-Mockup-Service

./: .gitignore  DWuV.postman_collection.json  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
app/: config.py  db.py  main.py  models.py
app/auth/: certificate.py  oauth2.py  router.py  schemas.py
app/sign/: router.py  schemas.py
app/tmp/: Tom Bischopink_private_key.pem
